--- a/src/sass/abstract/_media-queries.scss
+++ b/src/sass/abstract/_media-queries.scss
@@ -3,3 +3,9 @@
     @content;
   }
 }
+
+@mixin mobileLg {
+  @media (min-width: 414px) {
+    @content;
+  }
+}
